# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.19 $ $Date: 2007-08-13 16:37:10 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2007-08-13  Christian Heller  <christian.heller@tuxtax.de>

        * Replace all integer numbers like 0, 1 etc. with the corresponding constant *NUMBER_0_INTEGER, *NUMBER_1_INTEGER etc.
        * Clean up source code a bit, deleting outdated comments etc.

2007-08-12  Christian Heller  <christian.heller@tuxtax.de>

        * Add "url_escape_code_constants.c", "url_escape_code_mapper.c", "url_escape_code_converter.c"
        * Add "http_request_converter.c", "http_response_converter.c"
        * Add "html_character_constants.c", "html_character_mapper.c"
        * Add "lcid_language_constants.c" (just for the future)

2007-08-04  Christian Heller  <christian.heller@tuxtax.de>

        * Continue to work through and update file "applicator/receive/receive_socket.c"
        * Comment out "#include <GL/freeglut.h>" in file "controller/tester.c",
            as including "glut.h" of the official xorg glut package suffices
            (hint from  Didier Link <didier@famille-link.fr>)

2007-08-03  Christian Heller  <christian.heller@tuxtax.de>

        * Adapt "applicator/send/send_socket.c" to wrap xhtml messages as http body with http protocol, status code and headers
        * Add "globals/constants/character/character_set_constants.c" file
        * Add "globals/constants/file_extension/" directory with one file containing text file extension constants
        * Add "globals/constants/http/http_header_constants.c" file